--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase-admin": "^8.12.1",
+    "jsonwebtoken": "^8.5.1",
     "react-router-dom": "^5.2.0"
   }
 }
